@@ -4,8 +4,9 @@ sourceforge (2.6-0+6+) unstable; urgency=low
   * [Roland] Added debconf magic to ask whether to replace a config file
     before doing it (in the post-installation and pre-remove phases).
   * [Christian] Changed to use cvsweb 
+  * [Roland] Added "-s /bin/sh" when su'ing to postgres.
 
- -- Christian Bayle <bayle@aist.enst.fr>  Wed, 20 Feb 2002 18:29:01 +0100
+ --
 
 sourceforge (2.6-0+6) unstable; urgency=low
 
